[package]
name = "malefic-srdi"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.test]
panic = "abort"

[profile.dev]
panic = "abort"

[profile.release]
panic_unwind = false
panic = "abort"
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
debug-assertions = false
codegen-units = 1
incremental = false

# [dependencies]
# cfg-if = "1.0"

[dependencies.winapi]
version = "0.3.9"
features = [
    "winuser", 
    "fileapi",
    "handleapi",
    "winbase",
]

[dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemInformation",
    "Win32_System_Environment",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_Globalization",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Wdk_System_SystemServices",
]